clusters/prodesks/infra/traefik/routes/wireguard-dashboard-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard
  namespace: wireguard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: wireguard.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wireguard-wg-easy-http
                port:
                  number: 51821
